# Meta-Embedded

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  compile_cli.sh
.github/workflows/: cmake.yaml  release.yml
config/: RM_Board_2017.cfg  RM_Board_F3X.cfg  RM_Board_Linux.cfg  RM_Board_Mac.cfg  RM_Board_Win.cfg  RM_F4_Stlink.cfg  chconf.h  cmsis-dap.cfg  compile_options.cmake  cross_compile_options.cmake  flags.cmake  null_run.sh  openocd_connect.sh  openocd_connect_with_pipe.sh  openocd_flash.sh  openocd_write.sh  toolchain-arm-embi.cmake  toolchain.cmake
config/buzzer_sound_array_generator/: one.json
dev/: Makefile  chconf.h  dev.mk  gimbal_process_function.cpp  gimbal_process_function.h  halconf.h  main.cpp  mcuconf.h  referee_interface.cpp  referee_interface.h  send_currents_functions.h  shellconf.h  vision_port.h
dev/.build/: ch.dmp  ch.elf  ch.hex  ch.list  ch.map
dev/PID/: pid.cpp  pid.hpp
dev/board/: board.h  board.mk
dev/common/: CRC16.cpp  CRC16.h  CRC8.cpp  CRC8.h  chassis_common.h  common_macro.h  port_to_string.cpp  port_to_string.h  port_to_string.hpp
dev/control/: RoboticArmSKD.cpp  RoboticArmSKD.h  chasis_controller.cpp  chasis_controller.h  chassis.cpp  chassis.h  chassis_calculator.cpp  chassis_calculator.h  chassis_controller.cpp  chassis_controller.h  chassis_controller_unit_test.cpp  chassis_scheduler.cpp  chassis_scheduler.h  elevator.cpp  elevator.h  elevator_controller.cpp  elevator_controller.h  elevator_thread.cpp  elevator_thread.h  engineer_chassis_skd.cpp  engineer_chassis_skd.h  engineer_elevator_logic.cpp  engineer_elevator_logic.h  engineer_elevator_skd.cpp  engineer_elevator_skd.h  engineer_logic.cpp  engineer_logic.h  gimbal.cpp  gimbal.h  gimbal_calculator.cpp  gimbal_calculator.h  gimbal_controller.cpp  gimbal_controller.h  gimbal_controller_unit_test.cpp  gimbal_scheduler.cpp  gimbal_scheduler.h  hero_shoot.cpp  hero_shoot.h  robotic_arm.h  robotic_arm_skd.cpp  (+19 more)
dev/debug/: button_monitor.cpp  button_monitor.h  button_monitor.hpp  gimbal_feedback_module.cpp  gimbal_feedback_module.h  halt_handler.cpp  led.cpp  led.h  led.hpp  main_blink.cpp  serial_shell.cpp  serial_shell.h  serial_shell.hpp  serial_shell_commands.cpp  serial_shell_commands.h  serial_shell_commands.hpp  shell_debug_commands.cpp  shell_debug_commands.h  shellconf.h  unit_test_common.cpp  unit_test_common.h  unit_test_common.hpp
dev/interface/: README.md  VCP.cpp  VCP.h  air_tank_interface.cpp  air_tank_interface.h  attitude_calc.cpp  attitude_calc.h  buzzer.cpp  buzzer.h  buzzer_interface.cpp  buzzer_interface.h  can_interface.cpp  can_interface.h  capacitor_interface.cpp  capacitor_interface.h  chassis_interface.cpp  chassis_interface.h  dms_interface.cpp  dms_interface.h  elevator_interface.cpp  elevator_interface.h  engineer_chassis_interface.cpp  engineer_chassis_interface.h  engineer_elevator_interface.cpp  engineer_elevator_interface.h  engineer_gimbal.cpp  engineer_gimbal.h  engineer_grab_mech_interface.cpp  (+42 more)
doc/: debug.md  project_compile_system.md  shell.md  shell_manual.md
extra/: null.cpp  openocd_connect_with_pipe.sh
include/: LED.h
lib/: CMakeLists.txt
lib/cmsis/: CMakeLists.txt
lib/crc/: CMakeLists.txt  CRC16.cpp  CRC16.h  CRC8.cpp  CRC8.h
os/: CMakeLists.txt  ch.cmake
os/board/rm_board_2017/: board.h  board.mk  mcuconf.h
os/board/rm_board_2018_a/: board.h
os/common/ports/ARM/: chcore.h
os/common/ports/ARMCMx/: chcore_v6m.h  chcore_v7m.c  chcore_v7m.h  mpu.h
os/common/ports/ARMCMx/compilers/GCC/: chcoreasm_v7m.S
os/common/ports/ARMCMx/compilers/IAR/: chcoreasm_v7m.s
os/common/ports/ARMCMx/compilers/RVCT/: chcoreasm_v7m.s
os/common/ports/SIMIA32/: chcore.h
os/common/ports/e200/: chcore.h
os/common/ports/templates/: chcore.h
os/common/startup/ARMCMx/compilers/GCC/: rules.mk
os/ex/ST/: lps22hb.h
os/ex/dox/: accelerometer.dox  hal.dox  main.dox  thermometer.dox
os/ex/include/: ex.h
os/hal/dox/: hal_barometer.dox  hal_compass.dox  hal_dac.dox  hal_flash.dox  hal_gyro.dox  hal_hygrometer.dox  hal_sensor.dox
os/hal/include/: hal.h  hal_adc.h  hal_crypto.h
os/hal/lib/complex/mfs/: hal_mfs.c  hal_mfs.h
os/hal/lib/complex/serial_nor/devices/macronix_mx25/: hal_flash_device.h
os/hal/lib/streams/: chprintf.h
os/hal/ports/STM32/LLD/ADCv3/: hal_adc_lld.c
os/hal/ports/STM32/LLD/CRYPv1/: hal_crypto_lld.c  hal_crypto_lld.h
os/hal/ports/STM32/LLD/DMAv1/: stm32_dma.c
os/hal/ports/STM32/LLD/DMAv2/: stm32_dma.c
os/hal/ports/STM32/LLD/EXTIv1/: stm32_exti.h
os/hal/ports/STM32/LLD/GPIOv2/: hal_pal_lld.c
os/hal/ports/STM32/LLD/GPIOv3/: hal_pal_lld.c
os/hal/ports/STM32/LLD/I2Cv3/: hal_i2c_lld.c
os/hal/ports/STM32/LLD/OTGv1/: hal_usb_lld.h
os/hal/ports/STM32/LLD/SDMMCv1/: hal_sdc_lld.c
os/hal/ports/STM32/LLD/TIMv1/: hal_pwm_lld.c  hal_pwm_lld.h  hal_st_lld.c
os/hal/ports/STM32/LLD/USARTv1/: hal_uart_lld.c
os/hal/ports/STM32/STM32F37x/: hal_lld.h  platform.mk  stm32_registry.h
os/hal/ports/STM32/STM32F4xx/: hal_lld.c  hal_lld_type1.h  hal_lld_type2.h  stm32_rcc.h  stm32_registry.h
os/hal/ports/STM32/STM32F7xx/: hal_lld.c  stm32_registry.h
os/hal/ports/STM32/STM32H7xx/: hal_lld.c  hal_lld.h  platform.mk  stm32_registry.h
os/hal/ports/STM32/STM32L0xx/: hal_lld.c
os/hal/ports/STM32/STM32L1xx/: hal_lld.c  hal_lld.h  platform.mk  stm32_registry.h
os/hal/ports/STM32/STM32L4xx/: hal_lld.c  stm32_rcc.h  stm32_registry.h
os/hal/ports/common/ARMCMx/: mpu_v7m.h
os/hal/src/: hal.c  hal_crypto.c
os/hal/templates/: hal_crypto_lld.c  hal_crypto_lld.h
os/license/: chversion.h
os/nil/dox/: nil.dox
os/nil/include/: ch.h
os/oslib/include/: chlib.h  chmempools.h
os/rt/include/: ch.h
os/rt/src/: chmtx.c  chschd.c
os/various/cpp_wrappers/: ch.hpp  syscalls_cpp.cpp
os/various/shell/: shell.h
src/: HaltHandler.cpp  LED.cpp
test/: CMakeLists.txt  HelloTest.cpp  LEDTest.cpp  TestRunner.cpp  cpputest.cmake
test/HALStubs/: hal.h  hal_pal_stub.cpp  hal_pal_stub.h  hal_pal_stub_test.cpp
test/MockHAL/: hal.h
test/mock_hal/: CMakeLists.txt  mock_hal_pal.cpp  mock_hal_pal.h
(+757 files in other folders)
